--- a/ReceitaCulinaria/index.html
+++ b/ReceitaCulinaria/index.html
@@ -12,7 +12,7 @@
 
         <div class="container10">
             <div class="imagem10">
-                <img src="/doce.png" width="100px">
+                <img src="/ReceitaCulinaria/doce.png" width="100px">
             </div>
             
             <div>
