--- a/FlexBoxAtividade/index.html
+++ b/FlexBoxAtividade/index.html
@@ -111,11 +111,11 @@
 
         <div class="paginasAdicionais">
             <div>
-                <a> sobre nós </a>
+                <a class="sbrenos"> sobre nós </a>
             </div>
 
             <div>
-                <a> contato </a>
+                <a class="cntt" > contato </a>
             </div>
         </div>
         
