--- a/FlexBoxAtividade/index.html
+++ b/FlexBoxAtividade/index.html
@@ -105,17 +105,18 @@
 
             </div>
         <div class="sidebar">
-            <div class="box red"> <iframe width="400" height="315" src="https://www.youtube.com/embed/b61jMvYACE4?si=W7_jaIWkG_pAoGhI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </div>
-            <div class="box red"> <iframe width="400" height="315" src="https://www.youtube.com/embed/NYnmXqw3ISs?si=r_OhE5i6JIYyL77c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="box red"> <iframe width="100%" height="250px" src="https://www.youtube.com/embed/b61jMvYACE4?si=W7_jaIWkG_pAoGhI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </div>
+            <div class="box red"> <iframe width="100%" height="250px" src="https://www.youtube.com/embed/NYnmXqw3ISs?si=r_OhE5i6JIYyL77c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            
         </div>
 
         <div class="paginasAdicionais">
             <div>
-                <a class="sbrenos"> sobre nós </a>
+                <a href="artigos/sobreNos.html" class="sbrenos"> sobre nós </a>
             </div>
 
             <div>
-                <a class="cntt" > contato </a>
+                <a href="artigos/contatos.html" class="cntt" > contato </a>
             </div>
         </div>
         
