--- a/media/index.html
+++ b/media/index.html
@@ -8,22 +8,115 @@
 </head>
 <body>
     <div class="container">
+        <header>
+            <div class="container2">
+                <div> <img class="imagemHeader1" src="estética.png" alt=" " width="50px "> </div>
+                <div> <h1> Aura Estética </h1> </div>
+                <div> <img  class="imagemHeader2" src="cardapio.png" alt=" " width="30px"> </div>
+            </div>
+        </header>
+
         <div class="main-content">
-            <div class="box blue">main-1</div>
-            <div class="box blue">main-2</div>
-            <div class="box blue">main-3</div>
-            <div class="box blue">main-4</div>
-            <div class="box blue">main-5</div>
-            <div class="box blue">main-6</div>
-            <div class="box blue">main-7</div>
-            <div class="box blue">main-8</div>
+            <div class="box blue">
+                <div class="imagensArtigos">
+                    <a href="artigos/artigo1.html" > <img src="artigo1.jpg" width="400px"> </a> 
+                 </div>
+         
+                 <div class="artigos">
+                     <a href="artigos/artigo1.html" > Limpeza de Pele Profunda </a>
+                 </div>
+
+                 <div class="LMartigos">
+                     <a href="artigos/artigo1.html"> Leia Mais </a>
+                 </div>
+            </div>
+
+            <div class="box blue">
+                <div class="imagensArtigos">
+                    <a href="artigos/artigo4.html" > <img src="artigo4.jpg" width="400px"> </a>
+                </div>
+
+                <div class="artigos">
+                    <a href="artigos/artigo4.html" > Auto cuidado vai alem do Skin care?  </a>
+                </div>
+
+                <div class="LMartigos">
+                    <a href="artigos/artigo4.html"> Leia Mais </a>
+                </div>
+            </div>
+
+            <div class="box blue">
+                <div class="imagensArtigos">
+                    <a href="artigos/artigo2.html" > <img src="artigo32.webp" width="400px"> </a>
+                </div>
+
+                <div class="artigos">
+                    <a href="artigos/artigo2.html" > Procedimentos Coporais </a>
+                </div>
+
+                <div class="LMartigos">
+                    <a href="artigos/artigo2.html"> Leia Mais </a>
+                </div>
+            </div>
+
+            <div class="box blue">
+                <div class="imagensArtigos">
+                    <a href="artigos/artigo3.html"> <img src="imagem6.webp" width="400px"> </a> 
+                 </div>
+
+                 <div class="artigos">
+                     <a href="artigos/artigo3.html" > Make de Carnaval super colorida  </a>
+                 </div>
+
+                 <div class="LMartigos">
+                     <a href="artigos/artigo3.html"> Leia Mais </a>
+                 </div>
+            </div>
+
+            <div class="box blue">
+                <div class="imagensArtigos">
+                    <a href="artigos/artigo5.html"> <img src="imagem7.webp" width="400px"> </a>
+                </div>
+
+                <div class="artigos">
+                    <a href="artigos/artigo5.html"> O delineado colorio veio para ficar?  </a>
+                </div>
+
+                <div class="LMartigos">
+                    <a href="artigos/artigo5.html"> Leia Mais </a>
+                </div>
+            </div>
+
+            <div class="box blue">
+                <div class="imagensArtigos">
+                    <a href="artigos/artigo6.html"> <img src="imagem8.webp" width="400px" > </a> 
+                 </div>
+
+                 <div class="artigos">
+                     <a href="artigos/artigo6.html"> Monte sua necessaire de maquiagem  </a>
+                 </div>
+
+                 <div class="LMartigos">
+                     <a href="artigos/artigo6.html"> Leia Mais </a>
+                 </div>
+            </div>
         </div>
+
         <div class="sidebar">
-            <div class="box red">sidebar-1</div>
-            <div class="box red">sidebar-2</div>
-            <div class="box red">sidebar-3</div>
-            <div class="box red">sidebar-4</div>
+            <div class="box red"><iframe width="100%" height="250px" src="https://www.youtube.com/embed/b61jMvYACE4?si=W7_jaIWkG_pAoGhI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="box red"><iframe width="100%" height="250px" src="https://www.youtube.com/embed/NYnmXqw3ISs?si=r_OhE5i6JIYyL77c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
         </div>
+
+        <div class="paginasAdicionais">
+            <div>
+                <a href="artigos/sobreNos.html" class="sbrenos"> sobre nós </a>
+            </div>
+
+            <div>
+                <a href="artigos/contatos.html" class="cntt" > contato </a>
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
