--- a/FlexBoxAtividade/artigos/artigo1.html
+++ b/FlexBoxAtividade/artigos/artigo1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="artigo1.html"
+    <link rel="stylesheet" href="artigo1.html">
 </head>
 <body style="background-color: rgb(244, 235, 252);">
 
