--- a/media/artigos/sobrenos.html
+++ b/media/artigos/sobrenos.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container2">
+             <div class="logo">
+                 <div> <img class="imagemHeader1" src="/media/imagens/estética.png" alt=" " width="50px "> </div>
+             <div> <h1> Aura Estética </h1> </div>
+ 
+         </div>
+              
+             <div> <img  class="imagemHeader2" src="/media/imagens/cardapio.png" alt=" " width="30px"> </div>
+         </div>
+     </header>
+
 </body>
 </html>
