--- a/media/artigos/cntt.html
+++ b/media/artigos/cntt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/media/css/artigo1.css">
 </head>
 <body>
     <header>
@@ -13,9 +14,47 @@
              <div> <h1> Aura Estética </h1> </div>
  
          </div>
-              
              <div> <img  class="imagemHeader2" src="/media/imagens/cardapio.png" alt=" " width="30px"> </div>
          </div>
-     </header>
+    </header>
+
+     <div class="container">
+         <div class="main-content">
+             <div class="box blue">
+                    <h2>
+                        CONTATOS
+                    </h2>
+
+                     <p class="artigos">
+                        Telefone da empresa : 3456-8798
+                    </p>
+
+                     <p class="artigos">
+                         celular Joana: +55 47 8899-9898
+                    </p>
+
+                    <p class="artigos">
+                        celular Gabriel: +55 47 8899-8282
+                    </p>
+
+                    <p class="artigos">
+                        celular Miguel: +55 47 9988-0057
+                    </p>
+
+                    <p class="artigos">
+                        celular Lucinda: +55 47 3355-7463
+                    </p>
+
+                    <p class="artigos">
+                        celular Thaina: +55 47 7785-8393
+                    </p>
+
+                </div>
+            </div>
+        </div>
+
+    <div class="voltar">
+        <a class="ref" href="/media/index.html"> voltar à página inicial </a>
+    </div>
 </body>
 </html>
