--- a/media/index.html
+++ b/media/index.html
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="artigos">
-                    <a href="artigos/artigo5.html"> O delineado colorio veio para ficar?  </a>
+                    <a href="artigos/artigo5.html"> O delineado colorido veio para ficar?  </a>
                 </div>
 
                 <div class="LMartigos">
@@ -121,11 +121,11 @@
     
     <div class="paginasAdicionais">
         <div>
-            <a href="artigos/sobreNos.html" class="sbrenos"> sobre nós </a>
+            <a href="/media/artigos/sobrenos.html" class="sbrenos"> sobre nós </a>
         </div>
 
         <div>
-            <a href="artigos/contatos.html" class="cntt" > contato </a>
+            <a href="artigos/cntt.html" class="cntt" > contato </a>
         </div>
     </div>
 </body>
