--- a/media/artigos/artigo6.html
+++ b/media/artigos/artigo6.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/media/css/artigo1.css">
 </head>
 <body>
     <header>
@@ -17,6 +18,44 @@
             <div> <img  class="imagemHeader2" src="/media/imagens/cardapio.png" alt=" " width="30px"> </div>
         </div>
     </header>
+
+    <div class="container">
+        <div class="main-content">
+        
+            <div class="box blue">
+                <h2>
+                    Minha primeira necessaire de maquiagem
+                </h2>
+
+                <p class="artigos">
+                    Os produtos multifuncionais são interessantes tanto pra quem quer economizar “dinheiros”, quanto pra quem quer montar uma bolsinha de maquiagem pequena pra academia, uma viagem ou bolsa de trabalho. 
+                </p>
+            </div>
+
+            <div class="box blue">
+                <p>
+                    <h2 class="titulo3"> Cuide bem da sua necesssaire de maquiagem! </h2>
+                </p>
+    
+                <p class="textoartigo13">
+                    Cuide bem da sua necessaire, vale desde investir em bolsinhas laváveis, mas também verificar a validade dos seus produtos! Veja nossa lista completa de cuidados com a sua bolsinha de make:
+                </p>
+            </div>
+        </div>
+
+
+        <div class="sidebar">
+            <div class="box red">
+                <div class="imagensArtigos">
+                    <img src="/media/imagens/imagem8.webp">  
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="voltar">
+        <a class="ref" href="/media/index.html"> voltar à página inicial </a>
+    </div>
 
 </body>
 </html>
