--- a/media/artigos/artigo1.html
+++ b/media/artigos/artigo1.html
@@ -95,12 +95,12 @@
         <div class="sidebar">
             <div class="box red">
                 <div class="imagensArtigos">
-                    <img src="/Blog/artigo1.jpg" >  
+                    <img src="/media/imagens/artigo1.jpg" >  
                 </div>
             </div>
             <div class="box red">
                 <div class="imagensArtigos">
-                    <img src="/Blog/imagem2.jfif" >
+                    <img src="/media/imagens/imagem2.jfif" >
                 </div>
             </div>
         </div>
