--- a/media/artigos/artigo2.html
+++ b/media/artigos/artigo2.html
@@ -14,7 +14,6 @@
             <div> <h1> Aura Estética </h1> </div>
 
         </div>
-             
             <div> <img  class="imagemHeader2" src="/media/imagens/cardapio.png" alt=" " width="30px"> </div>
         </div>
     </header>
@@ -79,7 +78,7 @@
         <div class="sidebar">
             <div class="box red">
                 <div class="imagensArtigos">
-                    <img src="/Blog/imagem2.jfif" >
+                    <img src="/media/imagens/imagem2.jfif" >
                 </div>
             </div>
         </div>
