--- a/media/artigos/artigo3.html
+++ b/media/artigos/artigo3.html
@@ -59,12 +59,12 @@
         <div class="sidebar">
             <div class="box red">
                 <div class="imagensArtigos">
-                    <img src="/media/artigos/artigo31.webp" >  
+                    <img src="/media/imagens/artigo31.webp" >  
                 </div>
             </div>
             <div class="box red">
                 <div class="imagensArtigos">
-                    <img src="/media/artigos/artigo32.webp" >
+                    <img src="/media/imagens/artigo32.webp" >
                 </div>
             </div>
         </div>
