--- a/media/index.html
+++ b/media/index.html
@@ -11,12 +11,12 @@
     <header>
         <div class="container2">
             <div class="logo">
-                <div> <img class="imagemHeader1" src="/media/imagens/estética.png" alt=" " width="50px "> </div>
+                <div> <img class="imagemHeader1" src="imagens/estética.png" alt=" " width="50px "> </div>
             <div> <h1> Aura Estética </h1> </div>
 
         </div>
             
-            <div> <img  class="imagemHeader2" src="/media/imagens/cardapio.png" alt=" " width="30px"> </div>
+            <div> <img  class="imagemHeader2" src="imagens/cardapio.png" alt=" " width="30px"> </div>
         </div>
     </header>
     <div class="container">
@@ -25,7 +25,7 @@
         <div class="main-content">
             <div class="box blue">
                 <div class="imagensArtigos">
-                    <a href="artigos/artigo1.html" > <img src="/media/imagens/artigo1.jpg" > </a> 
+                    <a href="artigos/artigo1.html" > <img src="imagens/artigo1.jpg" > </a> 
                  </div>
          
                  <div class="artigos">
@@ -39,7 +39,7 @@
 
             <div class="box blue">
                 <div class="imagensArtigos">
-                    <a href="artigos/artigo2.html" > <img src="/media/imagens/artigo4.jpg" > </a>
+                    <a href="artigos/artigo2.html" > <img src="imagens/artigo4.jpg" > </a>
                 </div>
 
                 <div class="artigos">
@@ -53,7 +53,7 @@
 
             <div class="box blue">
                 <div class="imagensArtigos">
-                    <a href="artigos/artigo3.html" > <img src="/media/imagens/artigo32.webp" > </a>
+                    <a href="artigos/artigo3.html" > <img src="imagens/artigo32.webp" > </a>
                 </div>
 
                 <div class="artigos">
@@ -67,7 +67,7 @@
 
             <div class="box blue">
                 <div class="imagensArtigos">
-                    <a href="artigos/artigo4.html"> <img src="/media/imagens/imagem6.webp" > </a> 
+                    <a href="artigos/artigo4.html"> <img src="imagens/imagem6.webp" > </a> 
                  </div>
 
                  <div class="artigos">
@@ -81,7 +81,7 @@
 
             <div class="box blue">
                 <div class="imagensArtigos">
-                    <a href="artigos/artigo5.html"> <img src="/media/imagens/imagem7.webp" > </a>
+                    <a href="artigos/artigo5.html"> <img src="imagens/imagem7.webp" > </a>
                 </div>
 
                 <div class="artigos">
@@ -95,7 +95,7 @@
 
             <div class="box blue">
                 <div class="imagensArtigos">
-                    <a href="artigos/artigo6.html"> <img src="/media/imagens/imagem8.webp" > </a> 
+                    <a href="artigos/artigo6.html"> <img src="imagens/imagem8.webp" > </a> 
                  </div>
 
                  <div class="artigos">
