--- a/AtividadeKristian/index.html
+++ b/AtividadeKristian/index.html
@@ -37,11 +37,9 @@
                 Discover the best remote jobs offer among the best flexiable companies over the geographic area.
             </p>
         </div>
-    </section>
-    
-    <div class="paddingCelular"> </div>
-    
-    <section class="container3">
+
+        <div class="paddingCelular"> </div>
+    <div class="container3">
         <div>
             <img src="/AtividadeKristian/imagens/1.png">
         </div>
@@ -53,6 +51,7 @@
         <div>
             <img src="/AtividadeKristian/imagens/3.png">
         </div>
+     </div>
     </section>
 
 </body>
