--- a/AtividadeKristian/index.html
+++ b/AtividadeKristian/index.html
@@ -53,5 +53,24 @@
      </div>
     </section>
 
+    <section>
+        <p class="textoSecundario">
+            We help you to get your dream job watch intro
+        </p>
+
+        <div class="video">
+            <img src="/AtividadeKristian/imagens/video.png">
+        </div>
+    </section>
+
+    <section class="sessão3">
+        <p class="texto3">
+            why you should choose TalentHive
+        </p>
+
+        <img class="imagem3" src="/AtividadeKristian/imagens/Image Mobile.png">
+
+    </section>
+
 </body>
 </html>
