--- a/AtividadeKristian/index.html
+++ b/AtividadeKristian/index.html
@@ -154,18 +154,25 @@
 
     <section>
         <footer>
-            <h1 class="TituloFooter">
-                We'd like & love to help
-            </h1>
+            <div class="containerf">
+                <div class="containerfooter">
+                     <h1 class="TituloFooter">
+                        We'd like & love to help
+                    </h1>
+                </div>
 
-            <p class="textoAbaixo">
-                Get to knoww our hiring process before you appl or find answers to any ligening questions,right here, right now.
-            </p>
+                <div class="containerf2">
+                    <p class="textoAbaixo">
+                        Get to knoww our hiring process before you appl or find answers to any ligening questions,right here, right now.
+                    </p>
 
-            <p class="LerMais">
-                Learn more
-            </p>
-
+                    <p class="LerMais">
+                        Learn more
+                    </p>
+                </div>
+            </div>
+            
+            
             <p class="linha"> </p>
 
             <div class="container11">
