--- a/AtividadeKristian/index.html
+++ b/AtividadeKristian/index.html
@@ -189,7 +189,7 @@
 
                         </div>
 
-                        <div>
+                        <div class="containers6">
                             <div class="container6">
                                 <p>
                                     Explore
